--- a/04mvc-restfulcrud/src/main/resources/i18n/login_ja_JP.properties
+++ b/04mvc-restfulcrud/src/main/resources/i18n/login_ja_JP.properties
@@ -1,5 +1,5 @@
-login.btn=登录
-login.password=！
+login.btn=\u5466\u897F
+login.password=\uFF01
 login.remember=!!
-login.tip=丫麦蝶
-login.username=！！
+login.tip=\u4E2B\u9EA6\u8776
+login.username=\uFF01\uFF01
